--- a/Osmodean/src/app/main-page/main-page/main-page.component.html
+++ b/Osmodean/src/app/main-page/main-page/main-page.component.html
@@ -79,4 +79,37 @@
     </mat-grid-tile>
 
   </mat-grid-list>
+
+  <mat-grid-list class="contact" cols="1" rowHeight="200px">
+    <mat-grid-list cols="3" rowHeight="200px">
+
+      <mat-grid-tile colspan="1" rowspan="1">
+        <mat-icon class="example-icon">email</mat-icon>
+        <span>Відправити показники лічильників</span>
+      </mat-grid-tile>
+
+      <mat-grid-tile colspan="1" rowspan="1">
+        <mat-icon class="example-icon">monetization_on</mat-icon>
+        <span>Тарифи для дому</span>
+      </mat-grid-tile>
+
+      <mat-grid-tile colspan="1" rowspan="1">
+        <mat-icon class="example-icon">message</mat-icon>
+        <span>Питання-відповідь</span>
+      </mat-grid-tile>
+
+    </mat-grid-list>
+  </mat-grid-list>
+
+  <mat-grid-list class="news" cols="1">
+    Новини
+    <mat-grid-tile class="news-text" colspan="1" rowspan="1">
+      <p>Про воду
+        <br>
+        <span>
+        Філія "Інфокводоканал" з 08.11.2018 року підвищує вартість води до 21,95 грн/м.куб.
+      </span>
+      </p>
+    </mat-grid-tile>
+  </mat-grid-list>
 </header>
