--- a/Osmodean/src/app/main-page/main-page/main-page.component.css
+++ b/Osmodean/src/app/main-page/main-page/main-page.component.css
@@ -1,48 +1,104 @@
-mat-icon {
-    padding-right: 10px;
+.all {
+    background: url(/assets/bg.jpg) no-repeat center top / cover;
 }
 
-.contact {
-    margin-bottom: 20px;
+mat-toolbar {
+    background: rgba(255, 255, 255, 0.0)
+}
+
+.login {
+    display: flex;
+    flex-flow: row nowrap;
+    align-content: center;
+}
+
+.login-icon {
+    padding-right: 10px;
+    font-size: 30px;
+}
+
+.login-button {
+    font-size: 20px;
 }
 
 .contacts {
     font-weight: bold;
     text-align: center;
-    font-size:20px;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 50px;
 }
 
-img {
-    width: 150px;
-    height: 150px;
+/* .contacts-number-prefix {
+    color: red;
+    font-size: 25px;
+} */
+
+.contacts-number {
+    color: red;
+    font-size: 25px;
 }
 
-mat-grid-tile {
-    background: lightblue;
-}
-
-h1 {
+.company-name {
     font-size: 44px;
     color: red;
 }
 
-/* header {
-	background: url(/assets/bg.jpg) no-repeat center top / cover;
-	height: 100vh;
-} */
-
-.contact {
-    margin-top: 90px;
+.userfulInfo {
     border-bottom: 2px solid red;
     border-top: 2px solid red;
+    margin-top: 30px;
 }
 
-.news {
-    margin-top: 10px;
+.information {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.icon {
+    font-size: 36px;
+    margin-bottom: 20px;
+    color: red;
+}
+
+.information span {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.all-news {
+    background-image: linear-gradient(#cccccc, white);
+}
+
+/* .news {
+    display: flex;
+    flex-flow: column nowrap;
+    position: absolute;
+    align-items: flex-start;
+    justify-content: flex-start;
+} */
+
+.news > figure {
+    justify-content: flex-start !important;
+}
+
+.title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 10px;
+    padding-top: 50px;
+    border-bottom: 1px solid red;
+}
+
+.news-text p {
+    font-weight: bold;
 }
 
 .news-text {
-    position: absolute;
     left: 5px;
-    border-top: 1px solid red;
 }
