--- a/Osmodean/src/app/main-page/main-page/main-page.component.html
+++ b/Osmodean/src/app/main-page/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar>
       <div class="login">
         <mat-icon class="login-icon">account_box</mat-icon>
-        <button class="login-button" mat-button>Особистий кабінет</button>
+        <button class="login-button" mat-button (click)="openLogin()">Особистий кабінет</button>
       </div>
     </mat-toolbar>
   </header>
