--- a/Osmodean/src/app/login/login/login.component.css
+++ b/Osmodean/src/app/login/login/login.component.css
@@ -8,16 +8,20 @@
   .submit-btn {
     margin-top: 20px;
   }
+
+  mat-error {
+    font-size: 12px;
+  }
   
-  .links {
+  /* .links {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     margin-top: 10px;
-  }
+  } */
   
-  a {
+  /* a {
     text-decoration: none;
     color: gray;
-  }
+  } */
   
