Added some changes in main-page

--- a/Osmodean/src/app/login-page/login-component/login.component.html
+++ b/Osmodean/src/app/login-page/login-component/login.component.html
@@ -16,5 +16,8 @@
     {{formErrors.password}}
   </mat-error>
 
-  <button mat-raised-button color="primary" class="submit-btn" [disabled]="loginForm.invalid">Вхід</button>
+  <button mat-raised-button color="primary" 
+          class="submit-btn" 
+          [disabled]="loginForm.invalid">Вхід
+  </button>
 </form>
