--- a/Osmodean/src/styles.css
+++ b/Osmodean/src/styles.css
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
-<<<<<<< HEAD
 html, body {
     height: 100%;
 }
@@ -9,6 +8,4 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-=======
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
->>>>>>> flatPage
+/* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
