Added link with path /flat on the main-page

--- a/Osmodean/src/app/main-page/main-component/main-page.component.html
+++ b/Osmodean/src/app/main-page/main-component/main-page.component.html
@@ -4,6 +4,7 @@
       <div class="login">
         <mat-icon class="login-icon">account_box</mat-icon>
         <button class="login-button" mat-button (click)="openLogin()">Особистий кабінет</button>
+        <a routerLink="/flat"><button mat-button>FLAT</button> </a>
       </div>
     </mat-toolbar>
   </header>
